Fixed flag alignment

--- a/src/components/Flag/Flag.styl
+++ b/src/components/Flag/Flag.styl
@@ -18,7 +18,8 @@
 
 .f16, .f32 {
     .flag {
-        vertical-align: text-bottom;
+        vertical-align: middle;
+        margin-bottom: 0.1em;
     }
 }
 
