--- a/src/views/Game/Players.styl
+++ b/src/views/Game/Players.styl
@@ -129,6 +129,11 @@
         display: inline-block; 
         left: 3rem;
         top: 3rem;
+
+        .flag {
+            vertical-align: bottom;
+            margin-bottom: 0;
+        }
     }
 
 
